HelloUltraviolet/Fixtures/RejectedSource/Polymorphism/ImplementationMissingRequiredField/Expected.uv
//! Expected diagnostic metadata for the ImplementationMissingRequiredField rejected-source specimen.

expectedDiagnostic("E-TYP-2402", "rule.14.Impl-Field-Missing")
